# dacha-landing

./: .env  .gitignore  Cargo.toml  README.md  configuration.yaml  package-lock.json  package.json  server.js  server.ts  tsconfig.json
.github/workflows/: audit.yml  general.yml  main_dacha-sweets.yml
migrations/: 20240616143422_create_customers_table.sql
public/: calc.html  en.html  index.html  ja.html
public/css/: calc.css  calc.less  main.css  main.less
public/images/: Instagram_Glyph_White.svg:Zone.Identifier
public/js/: calc.js  main.js
scripts/: init_db.sh
src/: calc.ts  configuration.rs  lib.rs  main.rs  main.ts  models.rs  startup.rs
src/less/: main.less
src/routes/: health_check.rs  mod.rs  register.rs  static_site.rs
tests/: health_check.rs
