[package]
name = "dacha-landing"
version = "0.1.0"
authors = ["Joshua McCarthy"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "dacha-landing"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
warp = { version = "0.3.7", features = ["compression"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
config = "0.13"

[dev-dependencies]
reqwest = "0.12.3"
